--- a/2048.html
+++ b/2048.html
@@ -28,7 +28,7 @@
 
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <a class="restart-button">New Game</a>
+      <a class="restart-button">新游戏</a>
     </div>
 
     <div class="game-container">
@@ -36,7 +36,7 @@
         <p></p>
         <div class="lower">
 	        <a class="keep-playing-button">Keep going</a>
-          <a class="retry-button">Try again</a>
+          <a class="retry-button">再来一次</a>
         </div>
       </div>
 
