--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     
     <body>
         <h1>Hello World!</h1>
-        <a href="https://www.runoob.com">这是一个链接</a>
+        <a href="https://ian171.github.io/Bird/">点击游玩-飞翔的小鸟--\(˙<>˙)/--</a>
     </body>
 </html>
