--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Hello World!</h1>
         <a href="https://ian171.github.io/Bird/">点击游玩-飞翔的小鸟--\(˙<>˙)/--<br></a>
         <a href="https://ian171.github.io/2048">点击游玩-2048<br></a>
+        <a href="https://ian171.github.io/pacman">点击游玩-糖豆人<br></a>
     </body>
 </html>
