--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <a href="https://ian171.github.io/Bird/">点击游玩-飞翔的小鸟--\(˙<>˙)/--<br></a>
         <a href="https://ian171.github.io/2048">点击游玩-2048<br></a>
         <a href="https://ian171.github.io/pacman">点击游玩-糖豆人<br></a>
+        <a href="https://ian171.github.io/rusblock">点击游玩-俄罗斯方块<br></a>
     </body>
 </html>
