--- a/index.html
+++ b/index.html
@@ -9,5 +9,39 @@
         <a href="https://ian171.github.io/2048">点击游玩-2048<br></a>
         <a href="https://ian171.github.io/pacman">点击游玩-糖豆人<br></a>
         <a href="https://ian171.github.io/rusblock">点击游玩-俄罗斯方块<br></a>
+        <h1>制作人：果果 </h1>
     </body>
+    <!DOCTYPE html>
+ 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+ 
+<body>
+    <div class="box"></div>
+    <script>
+        function getTime() {
+            var date = new Date();
+            var year = date.getFullYear(); //获取年份
+            var month = date.getMonth() + 1; //获取月份
+            var day = date.getDate(); //获取日期
+            var hour = date.getHours(); //获取小时
+            hour = hour < 10 ? '0' + hour : hour;
+            var minute = date.getMinutes(); // 获取分
+            minute = minute < 10 ? '0' + minute : minute;
+            var seconds = date.getSeconds(); //获取秒
+            seconds = seconds < 10 ? '0' + seconds : seconds;
+            return year + '年' + month + '月' + day + '日&nbsp;' + hour + ':' + minute + ':' + seconds;
+        }
+ 
+        setInterval(function() {
+            document.querySelector('.box').innerHTML = getTime();
+        }, 1000)
+    </script>
+</body>
+ 
+</html>
 </html>
