--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         }, 1000)
     </script>
 </body>
+<body>
+ 
+<body background="2.png" style=" background-repeat:no-repeat ;background-size:100% 100%;
+background-attachment: fixed;">
+
+</body>
+
  
 </html>
 </html>
