--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 </body>
 <body>
  
-<body background="2.png" style=" background-repeat:no-repeat ;background-size:100% 100%;
-background-attachment: fixed;">
+<body background="2.png" style=" background-repeat:no-repeat ;background-size:100% 100%;background-attachment: fixed;">
 
 </body>
 
