--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Hello</title>
+        
     </head>
     
     <body>
@@ -42,12 +43,14 @@
         }, 1000)
     </script>
 </body>
+<html>
+<head>
+    <meta charset="UTF-8">
+</head>
 <body>
  
-<body background="2.png" style=" background-repeat:no-repeat ;background-size:100% 100%;background-attachment: fixed;">
-
+<body background="2.png" style=" background-repeat:no-repeat;background-size:100% 100%;background-attachment:fixed;">
 </body>
-
- 
+</html>
 </html>
 </html>
