--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
         function getTime() {
             var date = new Date();
             var year = date.getFullYear(); //获取年份
-            var month = date.getMonth() + 1; //获取月份
+            var month = date.getMonth() + 1; //获取月份p
             var day = date.getDate(); //获取日期
             var hour = date.getHours(); //获取小时
             hour = hour < 10 ? '0' + hour : hour;
