--- a/new/index.html
+++ b/new/index.html
@@ -71,20 +71,20 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/dmego/" title="github" target="_blank">
+                                        <a href="https://github.com/ian171/" title="github" target="_blank">
                                             <i class='social iconfont icon-github'></i>
                                             <span class="label">github</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://www.cnblogs.com/dmego/" title="cnblogs" target="_blank">
+                                        <a href="https://www.cnblogs.com/chenblog" title="cnblogs" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">cnblogs</span>
                                         </a>
                                     </li>
 
                                     <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/dmego/" title="zhihu" target="_blank">
+                                        <a href="https://www.zhihu.com/people/quaternary-24" title="zhihu" target="_blank">
                                             <i class='social iconfont icon-zhihu'></i>
                                             <span class="label">zhihu</span>
                                         </a>
