--- a/new/index.html
+++ b/new/index.html
@@ -62,7 +62,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://ian171.github.io" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://five.flarum.cloud/" class="blog-button" target="_blank">班级论坛</a>
                                     </li>
                                 </ul>
                             </nav>
