--- a/new/index.html
+++ b/new/index.html
@@ -33,7 +33,7 @@
                                 <div class="info-back">
                                     <h2> 
                                         
-                                            Fighting
+                                            奋斗自我
                                         
                                     </h2>
                                     <p>
@@ -46,7 +46,7 @@
                         </a>
                     </div>
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="Dmego Home">Dmego</a>
+                        <a href="#" title="Dmego Home">陈叶果</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
                     <hr class="panel-cover__divider iUp" />
