--- a/new/index.html
+++ b/new/index.html
@@ -48,7 +48,7 @@
                     <h1 class="panel-cover__title panel-title iUp">
                         <a href="#" title="Dmego Home">陈叶果</a>
                     </h1>
-                    <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
+                    <p class="panel-cover__subtitle panel-subtitle iUp">代码改变世界！</p>
                     <hr class="panel-cover__divider iUp" />
                     <p id="description" class="panel-cover__description iUp">如何得与凉风约, 不共尘沙一并来!
                         <br/>
@@ -91,7 +91,7 @@
                                     </li>
                                     <li class="navigation__item">
                                         <!-- 加密的邮箱地址, 请自行修改, 或者改用下方的明文方式 -->
-                                        <a href="javascript:decryptEmail('chenyeguo666888@hotmail.com');" title="email">
+                                        <a href="mailto://chenyeguo666888@hotmail.com" title="email">
                                         <!-- <a href="test@test.com" title="email"> -->
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
