--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@ body {
         <a href="https://ian171.github.io/minecraft">点击游玩-我的世界<br></a>
         <h1>制作人：果果 </h1>
     </body>
+    <script type="text/javascript">
+    var browser = navigator.appName;//获取浏览器名字
+    var b_version = navigator.appVersion;//获取浏览器版本信息
+    var version = parseFloat(b_version);//提取浏览器版本号
+​
+    document.write("浏览器名称是: " + browser)//浏览器名称是: Netscape
+    document.write("<br />")
+    document.write("浏览器版本是: " + version)//浏览器版本是: 5
+</script>
     <!DOCTYPE html>
  
 <head>
