--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ body {
         <a href="https://ian171.github.io/pacman">点击游玩-糖豆人<br></a>
         <a href="https://ian171.github.io/rusblock">点击游玩-俄罗斯方块<br></a>
         <a href="https://ian171.github.io/minecraft">点击游玩-我的世界<br></a>
-        <iframe src="//player.bilibili.com/player.html?aid=960038988&bvid=BV1Gp4y1K7aD&cid=1241058451&page=1&high_quality=1&danmaku=0" allowfullscreen="allowfullscreen" width="100%" height="500" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
-        <h1>制作人：果果 </h1>
+        <h1>制作人：陈叶果 </h1>
     </body>
     <!DOCTYPE html>
  
@@ -48,7 +47,7 @@ body {
             document.querySelector('.box').innerHTML = getTime();
         }, 1000)
     </script>
-    <script type="text/javascript">
+    <script>
     var browser = navigator.appName;//获取浏览器名字
     var b_version = navigator.appVersion;//获取浏览器版本信息
     var version = parseFloat(b_version);//提取浏览器版本号
