--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
         <a href="https://ian171.github.io/pacman">点击游玩-糖豆人<br></a>
         <a href="https://ian171.github.io/rusblock">点击游玩-俄罗斯方块<br></a>
         <a href="https://ian171.github.io/minecraft">点击游玩-我的世界<br></a>
+        <a href="https://ian171.github.io/new">进入新主页<br></a>
         <h1>制作人：陈叶果 </h1>
     </body>
     <!DOCTYPE html>
