--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>资源小站</title>
+        <body oncontextmenu=self.event.returnValue=false>
         <style>
 body {
   background-image: url('2.jpg');
@@ -15,6 +16,7 @@ body {
         <a href="https://ian171.github.io/pacman">点击游玩-糖豆人<br></a>
         <a href="https://ian171.github.io/rusblock">点击游玩-俄罗斯方块<br></a>
         <a href="https://ian171.github.io/minecraft">点击游玩-我的世界<br></a>
+        <a href="https://ian171.github.io/pvz/src">点击游玩-植物大战僵尸---中文版<br></a>
         <a href="https://ian171.github.io/new">进入新主页<br></a>
         <h1>制作人：陈叶果 </h1>
     </body>
