--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <body oncontextmenu=self.event.returnValue=false>
         <style>
 body {
-  background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  background-image: url('https://chen.ox.cm/2.png');
 }
 a {
         text-decoration: none;
