--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <body oncontextmenu=self.event.returnValue=false>
         <style>
 body {
-  background-image: url('https://chen.ox.cm/2.png');
+  background-image: url('https://chen.ox.cm/2.jpg');
 }
 a {
         text-decoration: none;
