--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" Content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-    <title>WebMC</title>
+    <title>Minecraft</title>
     <link id="favicon" rel="icon" href="#" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./mc.css" />
     <script src="./src/main.js" type="module"></script>
