--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ button {
         <br>
         <a href="https://ian171.github.io/pvz/src">点击游玩-植物大战僵尸---中文版<br></a>
         <br>
+        <a href="https://eaglercraft.com/mc/1.8.8/">点击游玩-我的世界1.8.8<br></a>
+        <br>
         <a href="https://ian171.github.io/new">进入新主页<br></a>
         
         <iframe src="https://neverup7.github.io/notion.clock" width="600" height="450" style="border:0;"  allowfullscreen="true"  loading="lazy"  referrerpolicy="no-referrer-when-downgrade"></iframe>
