--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ button {
         <br>
         <a href="new/">进入新主页<br></a>
         <br>
+        <a href="volumeshader.html">进入新主页<br></a>
         <a href="suicide.html">如果你不想活了，来这里看看吧<br></a>
         
         <iframe src="https://neverup7.github.io/notion.clock" width="600" height="450" style="border:0;"  allowfullscreen="true"  loading="lazy"  referrerpolicy="no-referrer-when-downgrade"></iframe>
